--- a/CBD/index.html
+++ b/CBD/index.html
@@ -26,6 +26,7 @@
                 <li><a href="about.html">О нас 2</a></li>
                 <li><a href="catalogue.html">Каталог продукции 3</a></li>
                 <li><a href="category.html">Категория 4</a></li>
+                <li><a href="category-list.html">Категория список</a></li>
                 <li><a href="item.html">Товар 5-6-8-9-10</a></li>
                 <li><a href="item-2.html">Товар 7</a></li>
                 <li><a href="order.html">Оформление заказа 12</a></li>
